--- a/Nathalya_2D/style.css
+++ b/Nathalya_2D/style.css
@@ -1,110 +1,89 @@
-* { font-family: Verdana; font-size: 96%; margin:0; padding:0;}
-label { display: block; margin-top: 10px; }
-label.error { float: none; color: red; margin: 0 .5em 0 0; vertical-align: top; font-size: 10px }
-p { clear: both; }
-.submit { margin-top: 1em; }
-em { font-weight: bold; padding-right: 1em; vertical-align: top; }
-body{
-	background:url(images/bg.png) repeat;
+body {
+    background-image: url('https://i.pinimg.com/originals/0c/69/1c/0c691c22d44fa88809791e21069a502f.png');
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #333;
 }
 
-#main{
-	width:500px;
-	margin:auto;
+.container {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    padding: 30px;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
-#geral{
-	width:500px;
-	background:#FFFFFF;
-	float:left;
+h1 {
+    text-align: center;
+    margin-bottom: 25px;
+    color: #2c3e50;
+    font-size: 2em;
 }
 
-#header{
-	width:500px;
-	height:81px;
-	background:url(images/header.jpg);
-	float:left;
+form {
+    display: flex;
+    flex-direction: column;
 }
 
-.recados {
-	float: left;
-	width: 480px;
-	margin-bottom: 10px;
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: #0066FF;
-	background-color: #EAF9FF;
-	padding: 10px;
-	list-style-type: none;
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1em;
+    margin-bottom: 15px;
+    resize: vertical;
 }
 
-#header h1 {
-	font-family: "Trebuchet MS", Tahoma, Verdana, "Agency FB", Arial;
-	font-size: 18px;
-	font-style: normal;
-	font-weight: bold;
-	color: #990000;
-	margin-top: 20px;
-	margin-left: 5px;
-}
-#header p {
-	font-size: 13px;
-	font-style: normal;
-	color: #999999;
-	margin-left: 5px;
-}
-#header a {
-	font-weight: bold;
-	color: #333333;
-}
-#formulario_mural {
-	text-align: center;
-	float: left;
-	width: 480px;
-	margin-bottom: 10px;
-	background:#F5F5F5;
-	padding:10px;
-}
-#mural input{
-	width: 150px;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	margin-top: 3px;
-	border: 1px solid #666666;
-}
-#mural textarea {
-	padding: 5px;
-	height: 90px;
-	width: 140px;
-	border: 1px solid #666666;
-}
-.btn {
-	padding: 7px;
-	width: 100px;
-	border: 1px solid #333333;
-	cursor:pointer;
+button,
+input[type="submit"] {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 15px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1.1em;
+    transition: background-color 0.3s ease;
 }
 
-.btn:hover{
-	background:#333333;
-	color:#999999;
+button:hover,
+input[type="submit"]:hover {
+    background-color: #2980b9;
 }
 
-#footer{
-	width:500px;
-	height:30px;
-	float:left;
-	display:block;
-	background:#000000;
-	line-height:30px;
+.error-message {
+    background-color: #fce7e7;
+    color: #c0392b;
+    padding: 15px;
+    border: 1px solid #f2c9c9;
+    border-radius: 4px;
+    font-size: 0.9em;
+    text-align: center;
+    box-shadow: 0 1px 5px rgba(192, 57, 43, 0.1);
 }
 
-#footer p{
-	color:#666666;
-	padding-left:10px;
-}
-
-#footer a{
-	color:#CCCCCC;
-	text-decoration:none;
+@media (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+    .container {
+        padding: 20px;
+    }
+    h1 {
+        font-size: 1.5em;
+    }
 }
